--- a/test/src/test.attach_1.in
+++ b/test/src/test.attach_1.in
@@ -52,7 +52,7 @@ export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 if test "x$RM_TYPE" = "xslurm" ; then
   $MPI_JOB_LAUNCHER_PATH -n$NUMTASKS -N$NUMNODES -ppdebug `pwd`/hang_on_SIGUSR1@EXE@ &
 elif test "x$RM_TYPE" = "xbgrm" ; then 
-  WAITAMOUNT=`expr $WAITAMOUNT \* 5`
+  WAITAMOUNT=`expr $WAITAMOUNT`
   nohup $MPI_JOB_LAUNCHER_PATH -verbose 1 -np $NUMTASKS -exe `pwd`/hang_on_SIGUSR1@EXE@ -cwd `pwd` &
 else
   echo "This RM is not supported yet" 
