--- a/test/src/test.fe_regErrorCB.in
+++ b/test/src/test.fe_regErrorCB.in
@@ -27,7 +27,9 @@
 # Place, Suite 330, Boston, MA 02111-1307 USA
 #--------------------------------------------------------------------------------
 #
-#  Check if attachAndSpawnDaemons can handle an invalid pid case correctly. 
+#  Check if attachAndSpawnDaemons can handle an invalid pid case correctly 
+#  and report the error message through a previously registered callback 
+#  function.
 #
 #  Update Log:
 #        May 19 2009 DHA: Created file.
