added support for the single compute node case

--- a/test/src/test.launch_2_uneven.in
+++ b/test/src/test.launch_2_uneven.in
@@ -44,7 +44,7 @@ if test "x$RM_TYPE" = "xbgrm" ; then
   rm -f nohup.out
 fi
 
-NUMTASKS=`expr $NUMNODES / 2 \* @SMP@ + 2`
+NUMTASKS=`expr $NUMNODES \* @SMP@ / 2 + 2`
                                                                                                                                                
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
                                                                                                                                                
