--- a/launchmon/src/linux/Makefile.in
+++ b/launchmon/src/linux/Makefile.in
@@ -46,6 +46,7 @@ am__aclocal_m4_deps = $(top_srcdir)/config/x_ac_bootfabric.m4 \
 	$(top_srcdir)/config/x_ac_gcrypt.m4 \
 	$(top_srcdir)/config/x_ac_mpicc.m4 \
 	$(top_srcdir)/config/x_ac_os_isa.m4 \
+	$(top_srcdir)/config/x_ac_prefix_config_h.m4 \
 	$(top_srcdir)/config/x_ac_rm.m4 \
 	$(top_srcdir)/config/x_ac_testnnodes.m4 \
 	$(top_srcdir)/config/x_ac_tracing_cost.m4 \
@@ -111,6 +112,7 @@ AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
+BUILD_FLAGS = @BUILD_FLAGS@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
@@ -174,6 +176,7 @@ PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 RANLIB = @RANLIB@
 RM_TYPE = @RM_TYPE@
+SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 SMPFACTOR = @SMPFACTOR@
@@ -236,7 +239,6 @@ target_alias = @target_alias@
 tvcmd = @tvcmd@
 SUBDIRS = lmon_api
 INCLUDES = -I.. -I@ARCHHEADER@
-BITS = @LIBBITSUFFIX@
 launchmon_SOURCES = main.cxx \
 	                  sdbg_linux_launchmon.cxx \
 	                  lmon_api/lmon_lmonp_msg.cxx \
@@ -281,8 +283,8 @@ launchmon_SOURCES = main.cxx \
 			  sdbg_linux_thr_db.hxx
 
 launchmon_LDADD = @LIBELF@ @LIBDL@
-launchmon_CFLAGS = @LNCHR_BIT_FLAGS@ $(AM_CFLAGS)
-launchmon_CXXFLAGS = @LNCHR_BIT_FLAGS@ $(AM_CXXFLAGS)
+launchmon_CFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ #$(AM_CFLAGS) 
+launchmon_CXXFLAGS = @BUILD_FLAGS@ @LNCHR_BIT_FLAGS@ #$(AM_CXXFLAGS)
 launchmon_LDFLAGS = -rdynamic @LNCHR_BIT_FLAGS@ $(AM_LDFLAGS) 
 all: all-recursive
 
